changed page-header position to relative on large viewports to solve z-index issue

--- a/src/css/layout/navigation.scss
+++ b/src/css/layout/navigation.scss
@@ -259,7 +259,7 @@
 
 @media (min-width: $viewport-md-min) {
   .page-header {
-    position: static;
+    position: relative;
     height: auto;
     padding-top: $spacing-unit;
     padding-bottom: $padding-unit;
